# rustmas-animation-template-cpp

./: .gitignore  CMakeLists.txt  README.md  manifest.json
src/: animation.cpp  animation.h
src/protocol/: main.cpp  parameters.cpp  parameters.h  point.h
